--- a/springboot-crud-rest-app/src/main/resources/public/ledger.html
+++ b/springboot-crud-rest-app/src/main/resources/public/ledger.html
@@ -24,7 +24,7 @@
  <div class="col-3">
 <label class="col-12"><b>FROM </b></label>
   
-  <div class="input-group date" id="datetimepicker_customerfromledge" data-target-input="nearest">
+  <div class="input-group date" id="datetimepicker_customerfromledge" data-date-format="YYYY-MM-DD" data-target-input="nearest">
      <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker_customerfromledge" ng-model="ledger.fromdate" placeholder="From Date"/>
         <div class="input-group-append" data-target="#datetimepicker_customerfromledge" data-toggle="datetimepicker">
             <div class="input-group-text"><i class="fa fa-calendar"></i></div>
@@ -35,7 +35,7 @@
 
 	 <div class="col-3">
 	  <label class="col-12"><b>TO </b></label>
-	  <div class="input-group date" id="datetimepicker_customertoledge" data-target-input="nearest">
+	  <div class="input-group date" id="datetimepicker_customertoledge" data-date-format="YYYY-MM-DD" data-target-input="nearest">
         <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker_customertoledge" ng-model="ledger.todate" placeholder="To Date"/>
         <div class="input-group-append" data-target="#datetimepicker_customertoledge" data-toggle="datetimepicker">
             <div class="input-group-text"><i class="fa fa-calendar"></i></div>
