--- a/springboot-crud-rest-app/src/main/resources/public/vehicle.html
+++ b/springboot-crud-rest-app/src/main/resources/public/vehicle.html
@@ -296,8 +296,8 @@
 							<div class='col-md-3'>
 								<label class="col-12"><b>Date&Time </b><span
 									class="mandatory">*</span></label>
-								<div class="input-group date" data-date-format="YYYY-MM-DD HH:mm:ss" id="datetimepicker5"
-									data-target-input="nearest">
+								<div class="input-group date" data-date-format="YYYY-MM-DD" id="datetimepicker5"
+									data-target-input="nearest"><!-- data-date-format="YYYY-MM-DD HH:mm:ss" -->
 									<input type="text" class="form-control datetimepicker-input"
 										data-target="#datetimepicker5" ng-model="trip.datetime"
 										placeholder="Enter Date" />
