billing full check

--- a/springboot-crud-rest-app/src/main/resources/public/billing.html
+++ b/springboot-crud-rest-app/src/main/resources/public/billing.html
@@ -871,10 +871,10 @@
 								<tr ng-repeat="invoice in  mpInvoiceJson track by $index">
 								  
 										<td><label>{{invoice.customername}}</label></td>
-										<td><label>{{invoice.inviocedate}}</label></td>
+										<td><label>{{invoice.invoicedate}}</label></td>
 										<td><label>{{invoice.customerbranch}}</label></td>
 										<td><label>{{invoice.customerstate}}</label></td>
-										<td><label>{{invoice.grand_total}}</label></td>
+										<td><label>{{invoice.grandTotal}}</label></td>
 										<td><label>{{invoice.status}}</label></td>
 										<!-- <td><label>{{invoice.truckType}}</label></td>
 										<td><label>{{invoice.noOfCase}}</label></td>
