--- a/springboot-crud-rest-app/src/main/resources/public/receipt.html
+++ b/springboot-crud-rest-app/src/main/resources/public/receipt.html
@@ -300,8 +300,8 @@
 										<td><input type="number"  id="amt" ng-model="pay.amount" class="form-control " ></td>
 										<td><input type="number" id="inst_no" class="form-control " ng-model="pay.instrumentno"></td>
 										<td> 
-									 <i class="fa fa-plus-circle fa-lg" aria-hidden="true" ng-click="addNewpayment()"></i> 
-									 <i class="fa fa-trash fa-lg" aria-hidden="true" ng-show="$index > 0" ng-click="deletepaymentIndex($index);"></i>
+									 <i class="fa fa-plus-circle fa-lg" aria-hidden="true" ng-click="addNewVendorpayment()"></i> 
+									 <i class="fa fa-trash fa-lg" aria-hidden="true" ng-show="$index > 0" ng-click="deleteVendorpaymentIndex($index);"></i>
 									
 								</td>
 								</tr>
@@ -675,7 +675,7 @@
  </div>
 		      		</div>
 		      		<div class="pull-right">
-					<input name="" type="button" class="btn btn-primary" id="" value="Print" style="margin-left: 20%;">
+					<input name="" type="button" class="btn btn-primary" id="" value="Print" style="margin-left: 0%;">
 					</div>
 					
 </div>
