ui changes for final demo

--- a/springboot-crud-rest-app/src/main/resources/public/vehicle.html
+++ b/springboot-crud-rest-app/src/main/resources/public/vehicle.html
@@ -59,7 +59,7 @@
 					<td>{{list.datetime}}</td>
 					<td>{{list.loadno}}</td>
 					<td>{{list.tripNo}}</td>
-					<td>{{list.invoiceNO}}</td>
+					<td>{{list.invoiceno}}</td>
 					<td>{{list.noOfCase}}</td>
 					<td>{{list.truckType}}</td>
 					<td>{{list.truckno}}</td>
